--- a/templates/application.scss
+++ b/templates/application.scss
@@ -1,3 +1,22 @@
+html,
 body {
-  background: red;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+}
+
+h1 {
+  margin: 0;
+}
+
+#header,
+#footer {
+  position: absolute;
+}
+
+#map_canvas {
+  width: 100%;
+  height: 100%;
 }
