--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -8,14 +8,13 @@
     %link{:href => '/application.css', :media => 'screen', :rel => 'stylesheet', :type => 'text/css'}
   %body
 
-    #wrap
+    %header#header
+      %h1 NSFAIL
 
-      %header#header
-        %h1 NSFAIL
+    = yield
 
-      = yield
-
-      %footer#footer
+    %footer#footer
 
   %script{:type => 'text/javascript', :src => 'http://code.jquery.com/jquery-1.6.4.min.js'}
-  %script{:type => 'text/javascript', :src => '/javascript/application.js'}
+  %script{:type => 'text/javascript', :src => 'http://maps.googleapis.com/maps/api/js?sensor=false'}
+  %script{:type => 'text/javascript', :src => '/javascripts/application.js'}
