--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -17,4 +17,5 @@
 
   %script{:type => 'text/javascript', :src => 'http://code.jquery.com/jquery-1.6.4.min.js'}
   %script{:type => 'text/javascript', :src => 'http://maps.googleapis.com/maps/api/js?sensor=false'}
+  %script{:type => 'text/javascript', :src => '/javascripts/twitterticker.js'}
   %script{:type => 'text/javascript', :src => '/javascripts/application.js'}
