Refactor the structure of view template

--- a/templates/index.haml
+++ b/templates/index.haml
@@ -1,1 +1,25 @@
 #map_canvas
+
+%section#cities
+  %h1 Cities
+  %ul
+    %li
+      %a{:href => '#'} Amsterdam
+    %li
+      %a{:href => '#'} Utrecht
+    %li
+      %a{:href => '#'} Groningen
+    %li
+      %a{:href => '#'} Delft
+    %li
+      %a{:href => '#'} The Hague
+    %li
+      %a{:href => '#'} Rotterdam
+    %li
+      %a{:href => '#'} Maastricht
+    %li
+      %a{:href => '#'} Leiden
+    %li
+      %a{:href => '#'} Den Bosch
+    %li
+      %a{:href => '#'} Arnhem
