--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -9,11 +9,22 @@
   %body
 
     %header#header
-      %h1 NSFAIL
+      %h1#logo #NSFail
+      /%nav
+      /  %ul
+      /    %li
+      /      %a{:href => '#'} About
+      /    %li
+      /      %a{:href => '#'} Who we are
 
-    = yield
+      = yield
 
-    %footer#footer
+      %footer#footer
+
+    %span.border.top
+    %span.border.right
+    %span.border.bottom
+    %span.border.left
 
   %script{:type => 'text/javascript', :src => 'http://code.jquery.com/jquery-1.6.4.min.js'}
   %script{:type => 'text/javascript', :src => 'http://maps.googleapis.com/maps/api/js?sensor=false'}
