--- a/templates/index.haml
+++ b/templates/index.haml
@@ -1,25 +1,27 @@
 #map_canvas
 
 %section#cities
-  %h1 Cities
+  %h1 Top Failing Cities
   %ul
     %li
       %a{:href => '#'} Amsterdam
     %li
       %a{:href => '#'} Utrecht
     %li
-      %a{:href => '#'} Groningen
-    %li
       %a{:href => '#'} Delft
     %li
-      %a{:href => '#'} The Hague
+      %a{:href => '#'} Leiden
+    %li
+      %a{:href => '#'} Den Haag
+    %li
+      %a{:href => '#'} Groningen
     %li
       %a{:href => '#'} Rotterdam
     %li
       %a{:href => '#'} Maastricht
     %li
-      %a{:href => '#'} Leiden
-    %li
       %a{:href => '#'} Den Bosch
+    %li
+      %a{:href => '#'} Arnhem
     %li
       %a{:href => '#'} Arnhem
