--- a/templates/application.sass
+++ b/templates/application.sass
@@ -2,6 +2,7 @@
 $font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 
 $font-color: #444
+$border-color: #bababa
 
 *
   margin: 0
@@ -72,7 +73,7 @@ header
     color: $font-color
     background: #000
     background: rgba(252, 252, 252, 0.85)
-    bottom: -100px
+    bottom: -200px
     display: block
     font-size: 1.6em
     left: 0
@@ -82,9 +83,27 @@ header
     -webkit-border-radius: 5px 5px 0 0
     -moz-border-radius: 5px 5px 0 0
     border-radius: 5px 5px 0 0
-    border-top: solid 1px #bababa
-    border-right: solid 1px #bababa
-    border-left: solid 1px #bababa
+    border-top: solid 1px $border-color
+    border-right: solid 1px $border-color
+    border-left: solid 1px $border-color
+
+    .avatar
+      border: 1px solid $border-color
+      float: left
+      margin-right: 1em
+
+      img
+        display: block
+
+    blockquote::after,
+    blockquote::before
+      color: #666
+      content: '"'
+
+    time
+      color: #666
+      font-size: 0.8em
+      font-style: italic
 
 #cities
   width: 336px
