--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -25,5 +25,6 @@
 
   %script{ :src => 'http://code.jquery.com/jquery-1.6.4.min.js'}
   %script{ :src => 'http://maps.googleapis.com/maps/api/js?sensor=false'}
+  %script{ :src => '/javascripts/jquery.timeago.js'}
   %script{ :src => '/javascripts/twitterticker.js'}
   %script{ :src => '/javascripts/application.js'}
