--- a/templates/application.sass
+++ b/templates/application.sass
@@ -22,11 +22,12 @@ h1
   margin: 0
 
 a
-  color: #FFF
+  color: #996633
   text-decoration: none
 
   &:hover
-    color: #FEBD4C
+    color: #644323
+    text-decoration: underline
 
 #map_canvas
   width: 100%
@@ -107,16 +108,8 @@ header
       font-size: 0.8em
       font-style: italic
 
-    a
-      color: #996633
-
-      &.nsfailmatch
-        font-weight: bold
-
-      &:hover,
-      &:focus
-        color: #644323
-        text-decoration: underline
+    a.nsfailmatch
+      font-weight: bold
 
 .box
   width: 336px
@@ -131,15 +124,32 @@ header
   border-radius: 4px
 
   h1
-    height: 44px
     margin: 0 -20px 25px
     padding: 0 20px
-    line-height: 44px
-    background: #eaeaea
-    border-bottom: solid 1px #bababa
+    line-height: 2em
+    font-size: 2em
+    background: #EAEAEA
+    border-bottom: solid 1px #BABABA
     -webkit-box-shadow: inset 0 -1px 0 0 #FFF
     -moz-box-shadow: inset 0 -1px 0 0 #FFF
     box-shadow: inset 0 -1px 0 0 #FFF
+  
+  h2
+    font-size: 1.4em
+    margin: 0.75em 0 0.25em
+  
+  p
+    font-size: 1.4em
+    line-height: 1.5em
+    margin-bottom: 1.5em
+  
+    &:last-child
+      margin-bottom: 0
+
+#cities
+  top: 110px
+  left: 100px
+  position: absolute
 
   ul
     height: 105px
@@ -165,10 +175,11 @@ header
     &:hover
       color: $font-color
 
-#cities
-  top: 110px
-  left: 100px
-  position: absolute
+#about
+  position: fixed
+  right: 5em
+  z-index: 99999
+  top: 5em
 
 .pin
   width: 38px
@@ -187,4 +198,3 @@ header
 
   &:hover
     color: #FFF
-
